<resources>
    <string name="app_name">Censo TBC</string>

    <string name="plantel_details">Plantel 09TST0001A - Pruebas</string>

    <!-- Texto para login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"¡ Bienvenido !"</string>
    <string name="invalid_username">El usuario no es valido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"El inicio de sesión falló"</string>
    <string name="recover_pass">¿Olvidaste tu contraseña?</string>
    <string name="register_user">¿Aún no te has registrado?</string>

    <string name="register_title">Agregar usuario</string>
    <string name="cct">CCT (10 caracteres)</string>
    <string name="action_register">Agregar</string>
    <string name="action_cancel">Cancelar</string>

    <!-- Texto para menús -->
    <string name="infraestructura_percent">100%</string>
    <string name="infraestructura_label">Infraestructura</string>
    <string name="equipamiento_percent">100%</string>
    <string name="equipamiento_label">Equipamiento</string>
    <string name="academicos_percent">100%</string>
    <string name="academicos_label">Datos académicos</string>

    <string name="section_title">Infraestructura</string>
    <string name="section1_label">Sección 1</string>
    <string name="section2_label">Sección 2</string>

    <string name="pregunta1_1_label">Pregunta 1.1</string>
    <string name="pregunta1_1_text">Respuesta 1.1</string>
    <string name="pregunta1_2_label">Pregunta 1.2</string>
    <string name="pregunta1_2_text">Respuesta 1.2</string>
    <string name="pregunta1_3_label">Pregunta 1.3</string>
    <string name="pregunta1_3_text">Respuesta 1.3</string>

    <string name="pregunta2_1_label">Pregunta 2.1</string>
    <string name="pregunta2_1_text">Respuesta 2.1</string>
    <string name="pregunta2_2_label">Pregunta 2.2</string>
    <string name="pregunta2_2_text">Respuesta 2.2</string>
    <string name="pregunta2_3_label">Pregunta 2.3</string>
    <string name="pregunta2_3_text">Respuesta 2.3</string>

    <string name="back_btn">Regresar</string>
    <string name="save_btn">Guardar</string>

    <string name="finish_title">Finalizar captura</string>
    <string name="action_edit">Editar</string>
    <string name="action_remove">Eliminar</string>
</resources>